public/listings.scss
/*
 * Copyright 2022 Google LLC
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

table.listings {
	/* These need to be CSS variables for use by adoptable.generated.css */
	--border-color: #ccc;
	--adoptable-color: var(--background-color-2);
	--pending-color: #ddd;
	--info-color: var(--link-color);
	$gap: 1.2rem;

	width: 100%;
	display: block;

	&.last-row tbody {
		grid-template-columns: repeat(auto-fit, minmax(0, min(300px, calc(49vw - #{$gap} / 2))));
	}

	tbody {
		display: grid;
		grid-column-gap: $gap;
		grid-row-gap: $gap;
		margin: 0 2vw $gap;
		grid-auto-flow: row dense;
		grid-template-columns: minmax(0, 300px) repeat(auto-fill, minmax(0, 300px));
		justify-content: center;

		@media print {
			display: block;
		}

		/* Each listing */
		tr {
			display: block;
			width: 100%;
			box-sizing: border-box;
			--listing-background: var(--adoptable-color);
			white-space: nowrap;
			$line-height: 1.1em;
			border: 1px solid var(--border-color);
			border-radius: 1rem;
			background: var(--listing-background);
			--side-padding: min(2vw, 1em);
			padding: 0.5em var(--side-padding);

			&.linked {
				box-shadow: -2px 2px 3px var(--shadow-color);
				cursor: pointer;

				td.fee {
					cursor: auto;
				}

				&.active {
					box-shadow: -2px 2px 3px var(--shadow-color) inset;

					th.name {
						> a, > a:visited {
							color: var(--active-color);
							border-bottom-color: var(--active-color);
						}
					}
				}
			}

			&.pair {
				grid-column-end: span 2;

				a {
					width: 100%;
					// TODO [#285]: Reduce width of a in bonded pairs to reduce underline width.
				}
			}

			ul {
				position: relative;
				display: inline-block;
				padding: 0;
				margin: 0;
				width: 100%;
				list-style-type: none;
				z-index: 1;

				li {
					width: calc(50% - #{$gap} / 2 - var(--side-padding));
					display: inline-block;
					box-sizing: border-box;

					&:first-of-type {
						margin-right: calc(#{$gap} + 2 * var(--side-padding));
					}
				}
			}

			th.name ul li {
				&:nth-of-type(2) {
					&::before {
						display: block;
						position: absolute;
						top: 0;
						left: calc(50% - #{$gap} / 2);
						width: $gap;
						height: $line-height;
						text-align: center;
						content: '&';
					}
				}
			}

			td.img ul li {
				vertical-align: middle;
			}

			order: 1;

			&.soon {
				order: 2;
			}

			&.displayStatus {
				order: 3;
				background-color: var(--pending-color);
			}

			&.displayStatus.explain td.fee {
				position: relative;
				overflow: visible !important;
				$cutoff: 450px; // sync with CUTOFF_WIDTH in adoptable.ts
				z-index: 1;

				span.fee::after {
					content: '\e8fd';
					font-family: 'Material Icons', sans-serif;
					font-size: 110%;
					vertical-align: -15%;
					color: var(--info-color);
					margin-left: 0.38ex;
				}

				aside.explanation {
					display: block;
					position: absolute;
					color: var(--text-color);
					font-size: 10pt;
					background-color: #fffffff6;
					--width: min(calc(100% + 2 * var(--side-padding) + min(1vw, 20%) + #{$gap}), 450px);
					width: var(--width);
					left: calc((var(--width) - 100%) / -2);
					top: 1.5rem;
					white-space: normal;
					text-align: justify;
					text-align-last: center;
					padding: 0.4em;
					border: 1px solid var(--border-color);
					box-shadow: -2px 2px 3px var(--shadow-color);
					border-radius: 1em;
					box-sizing: border-box;
					z-index: -1;
					opacity: 0;
					transition: opacity 200ms ease-out, z-index 0s 200ms, visibility 0s 200ms;
					visibility: hidden;

					&.hidden {
						display: none;
					}

					@media (max-width: $cutoff - 1px) {
						display: none;
					}
				}

				span.fee:hover::after {
					content: '\e887';
				}

				@media (min-width: $cutoff) {
					&.active span.fee::after {
						content: '\e887';
					}

					&.active aside.explanation {
						z-index: 2;
						opacity: 1;
						transition: opacity 200ms ease-in;
						cursor: default;
						visibility: visible;
					}
				}
			}

			a:hover {
				text-decoration: none;
			}

			// Cells moved to the last-row table.
			&.yote {
				display: none;
			}
		}
	}

	/* thead is only present for a11y */
	thead {
		display: none;
	}


	/* Individual data */
	td, th {
		--x-scale: 1;
		--y-scale: 1;
		display: block;
		box-sizing: border-box;
		width: calc(100% / var(--x-scale));
		text-align: center;
		vertical-align: middle;
		min-height: 1.4em;
		transform: scaleX(var(--x-scale));
		transform-origin: left;
		z-index: 1;

		> * {
			display: inline-block;
			transform: scaleY(var(--y-scale));
		}
	}

	th.name {
		font-size: 18pt;

		@media (min-width: 450px) {
			> a[id]:not([id=''])::after, > a li[id]:not([id=''])::after {
				content: ' (id#' attr(id) ')';
				font-size: 61.111%;
				vertical-align: 10%;
			}
		}
	}

	// TODO [#327]: Get rid of ugly selectors after target is bumped past Chrome 88/Firefox 84.
	// Then we can use the &:not(tr.pair a)::after variant below.
	tr:not(.soon):not(.pair) th.name a::after, tr:not(.soon) th.name a li:nth-of-type(2)::after {
		content: ' »';
	}


	tr:not(.soon) th.name a {
		border-bottom: 1pt solid var(--link-color);

		// See above - :not(tr.pair a) isn't supported until Chrome 88/Firefox 84.
		//&:not(tr.pair a)::after, li:nth-of-type(2)::after {
		//	content: ' »';
		//}

		@media (min-width: 450px) {
			&[id]:not([id=''])::after, li[id]:nth-of-type(2):not([id=''])::after {
				content: ' (id#' attr(id) ') »';
			}
		}

		&:visited {
			border-bottom: 1pt solid var(--visited-color);
		}

		&:active {
			border-bottom: 1pt solid var(--active-color);
		}

		&:hover {
			border-bottom-width: 1.5pt;
			margin-bottom: -.5pt;
		}
	}

	td.fee {
		color: red;

		&::before {
			white-space: pre-line;
		}
	}

	td.img {
		a {
			margin: 0 auto;
			display: inline-block;
			width: 100%;
			height: min(300px, calc((max(100vw, var(--global-min-width)) - 4px - #{$gap} - 4 * var(--side-padding)) * 3 / 4));
		}

		img {
			display: inline-block;
			min-width: 0;
			min-height: 0;
			width: 100%;
			height: 100%;
			object-fit: contain;
		}

		ul {
			height: 100%;
			width: 100%;

			li {
				height: 100%;
			}
		}
	}

	td.inquiry > a {
		font-size: 83%;
		text-decoration: none;

		&:hover {
			text-decoration: underline;
		}
	}
}

section.explanations {
	max-width: 10in;
	margin: 0 auto;

	> aside {
		z-index: 2;

		&:not(.shown) > p {
			margin: 0;
		}

		> div.close {
			display: none;
		}

		&.shown {
			// TODO [#287]: Fade in/out mobile tooltips.
			position: fixed;
			bottom: 2vw;
			left: 2vw;
			width: 96vw;
			z-index: 2;
			margin: 0;
			font-size: 11pt;

			> div.close {
				display: block;
				position: absolute;
				z-index: 3;
				top: 2vw;
				right: 2vw;
				cursor: pointer;
				font-family: 'Material Icons', sans-serif;
				font-size: 120%;

				&:active {
					color: var(--active-color);
				}
			}
		}
	}
}

